--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="container">
 SIMON LEPUSCHITZ
 
-<a href="#">Instagram</a>
+<a href="https://www.instagram.com/wavebender">Instagram</a>
         </div>
     </body>
 
